fix: 분석하기 오류 수정